# sentiric-sip-core

./: Cargo.toml  README.md
docs/: TESTING.md
src/: builder.rs  error.rs  header.rs  lib.rs  packet.rs  parser.rs  profiles.rs  sdp.rs  transport.rs  uri.rs  utils.rs
