[package]
name = "sentiric-sip-core"
version = "1.2.1"
edition = "2021"
description = "High-performance SIP (RFC 3261) engine with vendor profiles and async transport."
authors = ["Sentiric Team"]
license = "AGPL-3.0"

[dependencies]
# Async I/O ve Zamanlama
tokio = { version = "1", features = ["net", "sync", "rt", "time"] }
# Yapılandırılmış Loglama
tracing = "0.1"
# YENİ EKLENEN BAĞIMLILIKLAR
regex = "1"
once_cell = "1"